Fixed center grey area background bug on small screens

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -112,7 +112,7 @@ h1 {
 @media (max-width: $screen-sm) {
   .album-card {
     margin: 25px auto;
-    width: 400px;
+    max-width: 400px;
 
     img {
       float: right;
